# advanced_nlp_final

./: .gitignore  pyproject.toml
scripts/: Part_1.ipynb  Part_2_Augmentation.ipynb  Part_2_BERT.py  Part_3_BERT.py  augmented_reviews.csv  baseline_regex_categories.py  baseline_regex_stars_2cat.py  eda.ipynb  part_2_d.py  setup.py  setup_part3.py  utils.py
