[project]
name = "advanced-nlp-final"
version = "0.1.0"
description = "Final Advanced NLP Project"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "nltk>=3.9.1",
    "spacy>=3.8.4",
    "datasets>=3.4.0",
    "transformers>=4.49.0",
    "torch>=2.6.0",
    "keras-tuner>=1.4.7",
    "plotly>=6.0.1",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "fasttext-wheel>=0.9.2",
    "staticvectors>=0.2.0",
    "wordcloud>=1.9.4",
    "lime>=0.2.0.1",
    "shap>=0.47.2",
    "evaluate>=0.4.3",
    "accelerate>=1.6.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "seaborn>=0.13.2",
    "numpy==1.26",
    "tensorflow-hub>=0.16.1",
    "tensorflow>=2.19.0",
    "openai>=1.75.0",
    "hdbscan>=0.8.40",
    "bertopic>=0.17.0",
    "setfit>=1.1.2",
    "codecarbon>=3.0.1",
    "qdrant-client>=1.14.2",
    "rank-bm25>=0.2.2",
    "colbert>=0.40",
    "colbert-ai>=0.2.21",
    "ace-tools>=0.0",
    "wikipedia>=1.4.0",
    "duckduckgo-search>=8.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "black>=25.1.0",
    "pre-commit>=4.1.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.8",
    "mkdocs-jupyter>=0.25.1",
    "pymdown-extensions>=10.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

